--- a/src/app/shared/filme-card/filme-card.component.html
+++ b/src/app/shared/filme-card/filme-card.component.html
@@ -1,12 +1,19 @@
-<mat-card class="example-card">
-   <mat-card-header>
+<div class="filme-card">
+  <mat-card *ngFor="let filme of filmes">
+    <mat-card-header>
       <mat-card-title-group>
-         <mat-card-title>Shiba Inu</mat-card-title>
-         <mat-card-subtitle>Large</mat-card-subtitle>
-         <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+        <mat-card-title>{{ filme.title }}</mat-card-title>
+        <mat-card-subtitle>{{ filme.vote_average }}</mat-card-subtitle>
+        <img
+          mat-card-lg-image
+          src="https://www.themoviedb.org/t/p/w220_and_h330_face{{
+            filme.backdrop_path
+          }}"
+        />
       </mat-card-title-group>
-   </mat-card-header>
-   <mat-card-content>
-      {{longText}}
-   </mat-card-content>
-</mat-card>
+    </mat-card-header>
+    <mat-card-content>
+      {{ filme.overview }}
+    </mat-card-content>
+  </mat-card>
+</div>
