finalizacao de estilizacao e funcao buscar

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,37 +1,11 @@
-<mat-toolbar color="primary">
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
-  >
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>CINEMA SN</span>
-  <span class="example-spacer"></span>
-  <button
-    mat-icon-button
-    class="example-icon favorite-icon"
-    aria-label="Example icon-button with heart icon"
-  >
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
-    <mat-icon>share</mat-icon>
-  </button>
-</mat-toolbar>
-
-<div class="col-12 flex justify-content-center my-6">
-  <img width="350" src="assets/cinema-sn-logo.png" alt="" />
+<div class="flex justify-content-center my-6">
+  <img width="350" src="assets/cinema-sn-logo.png" alt="logo" />
 </div>
 
-<div class="col-12 flex justify-content-center">
-  <app-buscador></app-buscador>
-</div>
+<app-buscador></app-buscador>
 
-<div class="col-12 flex justify-content-center">
+<h3 class="flex justify-content-center my-6">Filmes Populares</h3>
+
+<div class="coluna">
   <app-filme-card></app-filme-card>
 </div>
